[package]
version = "0.1.0"
name = "todo_tutorial"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["ear_go"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
serde = "1.0.125"
ulid = "0.4.1"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
